# desktop_file_organizer

./: Cargo.toml  README.md
src/: main.rs
