[package]
name = "desktop_file_organizer"
version = "0.1.0"
edition = "2024"
authors = ["nascar-driver"]
description = "A crate for organizing your desktop files."
license = "MIT"
repository = "https://github.com/nascar-driver/desktop_file_organizer"
[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
dirs-next = "2.0.0"
toml_reader = "0.1.1"
